// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> Spec Snapshots should render a filled and disabled textarea 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332c3a;
  resize: vertical;
  border: 2px solid #d8d6db;
  background: #ffffff;
  opacity: 0.5;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #d8d6db;
}

.c1:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c1:hover {
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a filled textarea 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332c3a;
  resize: vertical;
  border: 2px solid transparent;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #d8d6db;
}

.c1:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a textarea which is resizable 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332c3a;
  resize: vertical;
  border: 2px solid transparent;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #d8d6db;
}

.c1:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a textarea with an error 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332c3a;
  resize: vertical;
  background: #ffe7e6;
  border: 2px solid transparent;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #d8d6db;
}

.c1:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c1:hover {
  background: #fdcac3;
}

.c1:focus {
  border: 2px solid #ff7c75;
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render an empty and disabled textarea 1`] = `
.c0 {
  position: relative;
  display: flex;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #332c3a;
  resize: vertical;
  border: 2px solid #d8d6db;
  background: #ffffff;
  opacity: 0.5;
}

.c1::placeholder {
  color: #727683;
}

.c1:hover {
  background: #d8d6db;
}

.c1:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c1:hover {
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
      id="id"
      name=""
      placeholder="Placeholder"
      rows="5"
    />
  </div>
</div>
`;
